<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/txtNombreReceta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="30dp"
        android:paddingEnd="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/warning"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/warning"
            android:src="@drawable/warning"
            android:visibility="gone"
            tools:ignore="InefficientWeight,RtlSymmetry" />

        <ImageView
            android:id="@+id/imageViewPostreIcono"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/postre"
            android:src="@drawable/postre_icono"
            android:visibility="gone"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/imageViewSharedIcono"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/shared"
            android:src="@drawable/shared_icon"
            android:visibility="gone"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/btnEditar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/editar"
            android:src="@drawable/ic_baseline_edit_24"
            tools:ignore="ImageContrastCheck,RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btnEliminar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/eliminar"
            android:src="@drawable/ic_baseline_delete_24"
            tools:ignore="ImageContrastCheck,RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>